review-service/src/main/fabric8/inventory-deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: inventory
spec:
  replicas: 1
  strategy:
    rollingParams:
      timeoutSeconds: 10800
    type: Rolling
  template:
    metadata:
      labels:
        app: inventory
        deploymentconfig: inventory
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: JAVA_APP_DIR
          value: /deployments
        - name: JAVA_OPTIONS
          value: -Dswarm.datasources.data-sources.InventoryDS.connection-url=jdbc:postgresql://inventory-database:5432/inventory
        name: inventory
        image: inventory:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - inventory
      from:
        kind: ImageStreamTag
        name: inventory:latest
    type: ImageChange
