review-service/src/main/fabric8/inventory-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  annotations:
    description: Inventory Service based on WF Swarm
    service.alpha.openshift.io/dependencies: '[{"name":"inventory-database","namespace":"","kind":"Service"}]'
spec:
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    deploymentconfig: inventory
  type: LoadBalancer
